--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,16 @@
             "email": "feycot@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "files": [
+            "src/index.php"
+        ]
+    },
+    "require": {
+        "tightenco/collect": "^9.33",
+        "illuminate/support": "^9.45"
+    }
 }
